--- a/index.html
+++ b/index.html
@@ -156,5 +156,142 @@
             
         </div>
     </section>
+
+    <section class="news">
+        <div class="section__container news__container">
+            <h2 class="section__title">Latest News</h2>
+            <div class="news__grid">
+                <div class="news__card">
+                    <img src="news-1.jpg" alt="news">
+                    <div class="news__details">
+                        <p>FASHION <i class="fa-regular fa-circle"></i>
+                            <span>JAMES SIMSON</span>
+                            <i class="fa-regular fa-circle"></i> FEB 2, 2019
+                        </p>
+                        <h4>Seasonal Trends</h4>
+                        <hr>
+                        <p>Discuss the latest fashion trends for the current season and
+                            offer tips and ideas on how to incorporate these trends into 
+                            your wardrobe.
+                        </p>
+                        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="news__card">
+                    <img src="news-2.jpg" alt="news">
+                    <div class="news__details">
+                        <p>TRENDS <i class="fa-regular fa-circle"></i>
+                            <span>JAMES SIMSON</span>
+                            <i class="fa-regular fa-circle"></i> APR 15, 2019
+                        </p>
+                        <h4>Fashion Tips and Advice</h4>
+                        <hr>
+                        <p>Provide your readers with practical tips and advice on how to 
+                            dress for different occasions, body types, or style preferences.
+                        </p>
+                        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="news__card">
+                    <img src="news-3.jpg" alt="news">
+                    <div class="news__details">
+                        <p>STYLE <i class="fa-regular fa-circle"></i>
+                            <span>JAMES SIMSON</span>
+                            <i class="fa-regular fa-circle"></i> JUL 22, 2019
+                        </p>
+                        <h4>Sustainable Fashion</h4>
+                        <hr>
+                        <p>Cover the growing trend of eco-conscious fashion and explore the
+                            various ways to be sustainable in your fashion choices.
+                        </p>
+                        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section__container brands__container">
+        <div class="brand__image">
+            <img src="brand-1.png" alt="brand">
+        </div>
+        <div class="brand__image">
+            <img src="brand-2.png" alt="brand">
+        </div>
+        <div class="brand__image">
+            <img src="brand-3.png" alt="brand">
+        </div>
+        <div class="brand__image">
+            <img src="brand-4.png" alt="brand">
+        </div>
+        <div class="brand__image">
+            <img src="brand-5.png" alt="brand">
+        </div>
+        <div class="brand__image">
+            <img src="brand-6.png" alt="brand">
+        </div>
+    </section>
+
+    <hr>
+
+    <footer class="section__container footer__container">
+        <div class="footer__col">
+            <h4 class="footer__heading">CONTACT INFO</h4>
+            <p>
+                <i class="fa-solid fa-location-dot"></i> 123, London Bridge Street, London
+            </p>
+            <p><i class="fa-solid fa-envelope"></i> support@monsa.com</p>
+            <p><i class="fa-solid fa-phone"></i> (+012) 3456 789</p>
+        </div>
+        <div class="footer__col">
+            <h4 class="footer__heading">COMPANY</h4>
+            <p>Home</p>
+            <p>About Us</p>
+            <p>Work With Us</p>
+            <p>Our Blog</p>
+            <p>Terms & Conditions</p>
+
+        </div>
+
+        <div class="footer__col">
+            <h4 class="footer__heading">USEFUL LINK</h4>
+            <p>Help</p>
+            <p>Track My Order</p>
+            <p>Men</p>
+            <p>Women</p>
+            <p>Shoes</p>
+
+        </div>
+        <div class="footer__col">
+            <h4 class="footer__heading">INSTAGRAM</h4>
+            <div class="instagram__grid">
+                <img src="instagram-1.jpg" alt="instagram">
+                <img src="instagram-2.jpg" alt="instagram">
+                <img src="instagram-3.jpg" alt="instagram">
+                <img src="instagram-4.jpg" alt="instagram">
+                <img src="instagram-5.jpg" alt="instagram">
+                <img src="instagram-6.jpg" alt="instagram">
+                
+
+            </div>
+        </div>
+
+        </footer>
+
+        <hr>
+
+        <div class="section__container footer__bar">
+        <div class="copyright">
+            Copyright @ 2023 Web Design Mastery. All rights reserved.
+        </div>
+        <div class="footer__form">
+            <form>
+                <input type="text" placeholder="ENTER YOUR EMAIL">
+                <button class="btn" type="submit">SUBSCRIBE</button>
+            </form>
+        </div>
+        </div>
 </body>
 </html>
